# fullstack-test-task

./: .env.dev  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_add_cascade_and_indexes.py
backend/src/: config.py  logging_config.py  main.py
backend/src/api/: schemas.py
backend/src/api/middleware/: db_session.py  http_logging.py  request_id.py
backend/src/api/v1/: alerts.py  files.py
backend/src/db/: models.py  session.py
backend/src/processing/: metadata.py  rules.py
backend/src/services/: alerts.py  files.py  processing.py
backend/src/storage/: local.py
backend/src/worker/: broker.py  tasks.py
backend/tests/: conftest.py  helpers.py  test_files.py  test_health.py  test_integration.py  test_metadata.py  test_rules.py  test_session.py  test_storage.py
backend/tests/integration/: test_api_errors.py  test_health.py  test_integration.py  test_processing.py
backend/tests/unit/: test_files.py  test_rules.py  test_storage.py  test_title.py
docs/: DEVELOPERS.md
frontend/: Dockerfile  README.md  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/api/: client.ts.html  index.html
frontend/coverage/composables/: index.html  useAlertText.ts.html  useApiErrorMessage.ts.html
frontend/coverage/utils/: format.ts.html  index.html
frontend/src/: App.vue  main.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/app/: page.tsx
frontend/src/assets/: main.css
frontend/src/components/: AlertTimeline.vue  AnimatedValue.vue  AppButton.vue  AppDrawer.vue  AppHeader.vue  AppIcon.vue  AppSpinner.vue  ConfirmDialog.vue  FileRowActions.vue  FileStatusBadge.vue  FileTable.vue  FileUploadZone.vue  StatsCards.vue
frontend/src/composables/: useAlertText.test.ts  useAlertText.ts  useApiErrorMessage.test.ts  useApiErrorMessage.ts  useConfirm.test.ts  useConfirm.ts  useDashboard.test.ts  useDashboard.ts
frontend/src/i18n/: index.test.ts  index.ts
frontend/src/i18n/locales/: en.json  ru.json
frontend/src/styles/: components.css  layout.css  tokens.css  transitions.css
frontend/src/types/: index.ts  ui.ts
frontend/src/utils/: format.test.ts
frontend/src/views/: Dashboard.vue
infra/nginx/: nginx.conf
