[project]
name = "file-exchange-api"
version = "1.0.0"
description = "File exchange API"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32",
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "redis>=5.0",
    "structlog>=24.4",
    "python-multipart>=0.0.20",
    "filetype>=1.2",
    "pypdf>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
mypy_path = "."
files = ["src"]

[[tool.mypy.overrides]]
module = ["taskiq.*", "taskiq_redis.*", "aiofiles.*", "filetype.*", "pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: HTTP API and full-stack scenarios",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/worker/broker.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
